# nexa-android

./: .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: android.yml
.opencode/: openwork.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_backend.cpp  llama_jni.cpp
app/src/main/java/com/ollama/mobile/: CrashLogger.kt  MainActivity.kt
app/src/main/java/com/ollama/mobile/data/api/: OllamaApi.kt  OllamaLibraryApi.kt  OllamaLibraryClient.kt  RetrofitClient.kt
app/src/main/java/com/ollama/mobile/data/config/: AppConfig.kt
app/src/main/java/com/ollama/mobile/data/inference/: LocalInferenceEngine.kt
app/src/main/java/com/ollama/mobile/data/model/: ChatModels.kt  GenerateModels.kt  ModelModels.kt  ModelsResponse.kt  TagsModels.kt
app/src/main/java/com/ollama/mobile/data/repository/: ChatHistoryRepository.kt  ModelRepository.kt  OfflineModelRepository.kt  OllamaRepository.kt
app/src/main/java/com/ollama/mobile/domain/model/: AppSettings.kt  Models.kt
app/src/main/java/com/ollama/mobile/domain/usecase/: ChatUseCase.kt  ConnectionUseCase.kt  GetModelsUseCase.kt
app/src/main/java/com/ollama/mobile/ui/: OllamaApp.kt
app/src/main/res/drawable/: ic_github.xml  ic_instagram.xml  ic_launcher.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_launcher_round.xml  ic_linkedin.xml  ic_x.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
(+15 files in other folders)
